# anrmalloc

./: Makefile.am  anrmalloc.pc.in  configure.ac  gmalloc.pc.in
src/: STYLE  anrcore.c  anrcore.h  anrmalloc.c  anrmalloc.cfg  anrmalloc.h  gmalloc.c  gmalloc.cfg  gmalloc.h  gmalloc.lnk  parse_config.c  parse_config.h
src/tests/: run-test-gmalloc.sh  test_gmalloc.c  test_gmalloc.cfg
src/tools/: find-leaks.py
